[BE] refactor(#372):  toList() 변환